[package]
name = "spotify-unfollower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.11.5", features = ["cli", "env-file"] }
tokio = { version = "1.21.2", features = ["full"] }
